Grafana_configuration/grafana_service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nlb
  namespace: systems-dev-ns
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
  sessionAffinity: None
  type: LoadBalancer
